--- a/src/client/style/custom.scss
+++ b/src/client/style/custom.scss
@@ -1,3 +1,19 @@
+// HTML DEFAULT STYLES
+
+html,
+body {
+  width: 100%;
+  height: 100%;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+// BOOTSTRAP OVERRIDES
+
 $custom-highlight: #df3090;
 
 // Invert grayscale
@@ -29,4 +45,41 @@ $body-bg: $gray-100;
 // Override dropdowns to be opened by default
 .dropdown-menu {
   display: block !important;
+}
+
+// ANIMATIONS
+
+.slide-right {
+  opacity: 0.9;
+  right: 3rem;
+
+  &.slide-right-enter {
+    animation: slide-right-enter ease-out 0.25s;
+  }
+
+  &.slide-right-leave {
+    animation: slide-right-leave ease-in 0.25s;
+  }
+}
+
+@keyframes slide-right-enter {
+  from {
+    opacity: 0;
+    right: 0;
+  }
+  to {
+    opacity: 0.9;
+    right: 3rem;
+  }
+}
+
+@keyframes slide-right-leave {
+  from {
+    opacity: 0.9;
+    right: 3rem;
+  }
+  to {
+    opacity: 0;
+    right: 0;
+  }
 }
