--- a/src/client/style/custom.scss
+++ b/src/client/style/custom.scss
@@ -1,8 +1,5 @@
-// HTML DEFAULT STYLES
-
 html,
 body {
-  width: 100%;
   height: 100%;
 }
 
@@ -12,46 +9,25 @@ ul {
   margin: 0;
 }
 
-// BOOTSTRAP OVERRIDES
-
-$custom-highlight: #df3090;
-
-// Invert grayscale
-$gray-100: #212529;
-$gray-200: #343a40;
-$gray-300: #495057;
-$gray-400: #6c757d;
-$gray-500: #adb5bd;
-$gray-600: #ced4da;
-$gray-700: #dee2e6;
-$gray-800: #e9ecef;
-$gray-900: #f8f9fa;
-
-// ... and black and white as well
-$white: $gray-100;
-$black: $gray-900;
-
-// Override primary
-$primary: $custom-highlight;
-
-// Override background
-$body-bg: $gray-100;
-
-// Override modals to be opened by default
-.modal {
-  display: block !important;
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
 
-// Override dropdowns to be opened by default
-.dropdown-menu {
-  display: block !important;
-}
+// Slide right
 
-// ANIMATIONS
+$slide-right-opacity-on: 0.9;
+$slide-right-opacity-off: 0;
+$slide-right-right-on: 1rem;
+$slide-right-right-off: 0;
 
 .slide-right {
-  opacity: 0.9;
-  right: 3rem;
+  opacity: $slide-right-opacity-on;
+  right: $slide-right-right-on;
 
   &.slide-right-enter {
     animation: slide-right-enter ease-out 0.25s;
@@ -64,22 +40,64 @@ $body-bg: $gray-100;
 
 @keyframes slide-right-enter {
   from {
-    opacity: 0;
-    right: 0;
+    opacity: $slide-right-opacity-off;
+    right: $slide-right-right-off;
   }
   to {
-    opacity: 0.9;
-    right: 3rem;
+    opacity: $slide-right-opacity-on;
+    right: $slide-right-right-on;
   }
 }
 
 @keyframes slide-right-leave {
   from {
-    opacity: 0.9;
-    right: 3rem;
+    opacity: $slide-right-opacity-on;
+    right: $slide-right-right-on;
   }
   to {
-    opacity: 0;
-    right: 0;
+    opacity: $slide-right-opacity-off;
+    right: $slide-right-right-off;
+  }
+}
+
+// Slide top
+
+$slide-top-opacity-on: 1;
+$slide-top-opacity-off: 0;
+$slide-top-top-on: 3rem;
+$slide-top-top-off: 0;
+
+.slide-top {
+  opacity: $slide-top-opacity-on;
+  margin-top: $slide-top-top-on;
+
+  &.slide-top-enter {
+    animation: slide-top-enter ease-out 0.25s;
+  }
+
+  &.slide-top-leave {
+    animation: slide-top-leave ease-in 0.25s;
+  }
+}
+
+@keyframes slide-top-enter {
+  from {
+    opacity: $slide-top-opacity-off;
+    margin-top: $slide-top-top-off;
+  }
+  to {
+    opacity: $slide-top-opacity-on;
+    margin-top: $slide-top-top-on;
+  }
+}
+
+@keyframes slide-top-leave {
+  from {
+    opacity: $slide-top-opacity-on;
+    margin-top: $slide-top-top-on;
+  }
+  to {
+    opacity: $slide-top-opacity-off;
+    margin-top: $slide-top-top-off;
   }
 }
