--- a/src/client/style/custom.scss
+++ b/src/client/style/custom.scss
@@ -101,3 +101,117 @@ $slide-top-top-off: 0;
     margin-top: $slide-top-top-off;
   }
 }
+.Root {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+
+  .main {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    position: relative;
+  }
+
+  .notification {
+    position: absolute;
+    top: 3rem;
+    opacity: 0.9;
+    z-index: 9999;
+  }
+}
+
+.input-wrapper {
+  display: flex;
+  align-items: center;
+
+  input {
+    flex: 1 1 auto;
+    background: inherit;
+    color: inherit;
+    border: none;
+    outline: none;
+  }
+}
+
+.image-gallery {
+  display: grid;
+  grid-template-columns: repeat(5, 20%);
+  grid-template-rows: repeat(5, 20%);
+}
+
+.preview {
+  height: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+  position: relative;
+
+  .image-preview {
+    overflow-y: auto;
+
+    img {
+      height: initial;
+    }
+
+    canvas {
+      width: 100%;
+    }
+  }
+
+  .preview-top {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+
+  .preview-bottom {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+
+  .preview-left {
+    position: absolute;
+    left: 0;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+}
+
+.image-wrapper {
+  outline: none;
+  border: 3px solid transparent;
+
+  &:not(.empty) {
+    cursor: pointer;
+
+    &.selected,
+    &:hover {
+      border-color: #ff0080;
+      border-radius: 3px;
+    }
+  }
+}
+
+.default-message {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  .message {
+    text-align: center;
+    font-size: 2rem;
+    font-style: italic;
+  }
+}
+
+.page-link[disabled] {
+  opacity: 0.4;
+}
